--- a/index.html
+++ b/index.html
@@ -34,83 +34,83 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="row col-12">
-
+<!-- 08 am hour -->
           <div id="hour-08" class="time-block row col-12">
-            <div class="col-2 hour">8AM</div>
+            <div id="hour" class="col-2">8:00 AM</div>
             <textarea class="textarea col-8 description" placeholder="What's the plan for this hour?"></textarea>
             <button type="button" class="saveBtn col-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="icon"><path d="M433.1 129.1l-83.9-83.9C342.3 38.32 327.1 32 316.1 32H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h320c35.35 0 64-28.65 64-64V163.9C448 152.9 441.7 137.7 433.1 129.1zM224 416c-35.34 0-64-28.66-64-64s28.66-64 64-64s64 28.66 64 64S259.3 416 224 416zM320 208C320 216.8 312.8 224 304 224h-224C71.16 224 64 216.8 64 208v-96C64 103.2 71.16 96 80 96h224C312.8 96 320 103.2 320 112V208z"/>
               </svg>
             </button>
           </div>
-
+<!-- 09 am hour -->
           <div id="hour-09" class="time-block row col-12">
-            <div class="col-2 hour">9AM</div>
+            <div id="hour" class="col-2">9:00 AM</div>
             <textarea class="textarea col-8 description" placeholder="What's the plan for this hour?"></textarea>
             <button type="button" class="saveBtn col-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="icon"><path d="M433.1 129.1l-83.9-83.9C342.3 38.32 327.1 32 316.1 32H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h320c35.35 0 64-28.65 64-64V163.9C448 152.9 441.7 137.7 433.1 129.1zM224 416c-35.34 0-64-28.66-64-64s28.66-64 64-64s64 28.66 64 64S259.3 416 224 416zM320 208C320 216.8 312.8 224 304 224h-224C71.16 224 64 216.8 64 208v-96C64 103.2 71.16 96 80 96h224C312.8 96 320 103.2 320 112V208z"/>
               </svg>
             </button>
           </div>
-
+<!-- 10 am hour -->
           <div id="hour-10" class="time-block row col-12">
-            <div class="col-2 hour">10AM</div>
+            <div id="hour" class="col-2">10:00 AM</div>
             <textarea class="textarea col-8 description" placeholder="What's the plan for this hour?"></textarea>
             <button type="button" class="saveBtn col-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="icon"><path d="M433.1 129.1l-83.9-83.9C342.3 38.32 327.1 32 316.1 32H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h320c35.35 0 64-28.65 64-64V163.9C448 152.9 441.7 137.7 433.1 129.1zM224 416c-35.34 0-64-28.66-64-64s28.66-64 64-64s64 28.66 64 64S259.3 416 224 416zM320 208C320 216.8 312.8 224 304 224h-224C71.16 224 64 216.8 64 208v-96C64 103.2 71.16 96 80 96h224C312.8 96 320 103.2 320 112V208z"/>
               </svg>
             </button>
           </div>
-
+<!-- 11 am hour -->
           <div id="hour-11" class="time-block row col-12">
-            <div class="col-2 hour">11AM</div>
+            <div id="hour" class="col-2">11:00 AM</div>
             <textarea class="textarea col-8 description" placeholder="What's the plan for this hour?"></textarea>
             <button type="button" class="saveBtn col-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="icon"><path d="M433.1 129.1l-83.9-83.9C342.3 38.32 327.1 32 316.1 32H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h320c35.35 0 64-28.65 64-64V163.9C448 152.9 441.7 137.7 433.1 129.1zM224 416c-35.34 0-64-28.66-64-64s28.66-64 64-64s64 28.66 64 64S259.3 416 224 416zM320 208C320 216.8 312.8 224 304 224h-224C71.16 224 64 216.8 64 208v-96C64 103.2 71.16 96 80 96h224C312.8 96 320 103.2 320 112V208z"/>
               </svg>
             </button>
           </div>
-
+<!-- 12 pm hour -->
           <div id="hour-12" class="time-block row col-12">
-            <div class="col-2 hour">12PM</div>
+            <div id="hour" class="col-2">12:00 PM</div>
             <textarea class="textarea col-8 description" placeholder="What's the plan for this hour?"></textarea>
             <button type="button" class="saveBtn col-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="icon"><path d="M433.1 129.1l-83.9-83.9C342.3 38.32 327.1 32 316.1 32H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h320c35.35 0 64-28.65 64-64V163.9C448 152.9 441.7 137.7 433.1 129.1zM224 416c-35.34 0-64-28.66-64-64s28.66-64 64-64s64 28.66 64 64S259.3 416 224 416zM320 208C320 216.8 312.8 224 304 224h-224C71.16 224 64 216.8 64 208v-96C64 103.2 71.16 96 80 96h224C312.8 96 320 103.2 320 112V208z"/>
               </svg>
             </button>
           </div>
-
+<!-- 13 pm hour -->
           <div id="hour-13" class="time-block row col-12">
-            <div class="col-2 hour">1PM</div>
+            <div id="hour" class="col-2">1:00 PM</div>
             <textarea class="textarea col-8 description" placeholder="What's the plan for this hour?"></textarea>
             <button type="button" class="saveBtn col-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="icon"><path d="M433.1 129.1l-83.9-83.9C342.3 38.32 327.1 32 316.1 32H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h320c35.35 0 64-28.65 64-64V163.9C448 152.9 441.7 137.7 433.1 129.1zM224 416c-35.34 0-64-28.66-64-64s28.66-64 64-64s64 28.66 64 64S259.3 416 224 416zM320 208C320 216.8 312.8 224 304 224h-224C71.16 224 64 216.8 64 208v-96C64 103.2 71.16 96 80 96h224C312.8 96 320 103.2 320 112V208z"/>
             </svg>
             </button>
           </div>
-
+<!-- 14 pm hour -->
           <div id="hour-14" class="time-block row col-12">
-            <div class="col-2 hour">2PM</div>
+            <div id="hour" class="col-2">2:00 PM</div>
             <textarea class="textarea col-8 description" placeholder="What's the plan for this hour?"></textarea>
             <button type="button" class="saveBtn col-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="icon"><path d="M433.1 129.1l-83.9-83.9C342.3 38.32 327.1 32 316.1 32H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h320c35.35 0 64-28.65 64-64V163.9C448 152.9 441.7 137.7 433.1 129.1zM224 416c-35.34 0-64-28.66-64-64s28.66-64 64-64s64 28.66 64 64S259.3 416 224 416zM320 208C320 216.8 312.8 224 304 224h-224C71.16 224 64 216.8 64 208v-96C64 103.2 71.16 96 80 96h224C312.8 96 320 103.2 320 112V208z"/>
               </svg>
             </button>
           </div>
-
+<!-- 15 pm hour -->
           <div id="hour-15" class="time-block row col-12">
-            <div class="col-2 hour">3PM</div>
+            <div id="hour" class="col-2">3:00 PM</div>
             <textarea class="textarea col-8 description" placeholder="What's the plan for this hour?"></textarea>
             <button type="button" class="saveBtn col-1">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="icon"><path d="M433.1 129.1l-83.9-83.9C342.3 38.32 327.1 32 316.1 32H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h320c35.35 0 64-28.65 64-64V163.9C448 152.9 441.7 137.7 433.1 129.1zM224 416c-35.34 0-64-28.66-64-64s28.66-64 64-64s64 28.66 64 64S259.3 416 224 416zM320 208C320 216.8 312.8 224 304 224h-224C71.16 224 64 216.8 64 208v-96C64 103.2 71.16 96 80 96h224C312.8 96 320 103.2 320 112V208z"/>
               </svg>
             </button>
           </div>
-
+<!-- 16 pm hour -->
           <div id="hour-16" class="time-block row col-12">
-            <div class="col-2 hour">4PM</div>
+            <div id="hour" class="col-2">4:00 PM</div>
             <textarea class="textarea col-8 description" placeholder="What's the plan for this hour?"></textarea>
             <button type="button" class="saveBtn col-1">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="icon"><path d="M433.1 129.1l-83.9-83.9C342.3 38.32 327.1 32 316.1 32H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h320c35.35 0 64-28.65 64-64V163.9C448 152.9 441.7 137.7 433.1 129.1zM224 416c-35.34 0-64-28.66-64-64s28.66-64 64-64s64 28.66 64 64S259.3 416 224 416zM320 208C320 216.8 312.8 224 304 224h-224C71.16 224 64 216.8 64 208v-96C64 103.2 71.16 96 80 96h224C312.8 96 320 103.2 320 112V208z"/>
               </svg>
             </button>
           </div>
-
+<!-- 17 pm hour -->
           <div id="hour-17" class="time-block row col-12">
-            <div class="col-2 hour">5PM</div>
+            <div id="hour" class="col-2">5:00 PM</div>
             <textarea class="textarea col-8 description" placeholder="What's the plan for this hour?"></textarea>
             <button type="button" class="saveBtn col-1">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="icon"><path d="M433.1 129.1l-83.9-83.9C342.3 38.32 327.1 32 316.1 32H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h320c35.35 0 64-28.65 64-64V163.9C448 152.9 441.7 137.7 433.1 129.1zM224 416c-35.34 0-64-28.66-64-64s28.66-64 64-64s64 28.66 64 64S259.3 416 224 416zM320 208C320 216.8 312.8 224 304 224h-224C71.16 224 64 216.8 64 208v-96C64 103.2 71.16 96 80 96h224C312.8 96 320 103.2 320 112V208z"/>
